<resources>
    <string name="app_name">FastFood</string>
    <string name="google_maps_key">AIzaSyBtTASc03P6hbW3nkZHsi7mjxc4OmwZP3s</string>
    <string name="error_login">Error de inicio de sesión</string>
    <string name="retry_login">Reitentar</string>
    <string name="cancelar_button_text">Cancelar</string>
    <string name="error_network">No se pudo alcanzar el servidor, por favor verifique su conexión.</string>
    <string name="success_create_account">Cuenta creada</string>
    <string name="success_create_account_description">Tu cuenta ha sido registrada exitosamente.</string>
    <string name="text_button_init">Iniciar</string>
    <string name="error">Error</string>
    <string name="sucess_image">Image de exitoso</string>
    <string name="error_image">Error image</string>
    <string name="exist_account">¿Tienes cuenta? Inicia por aquí</string>
    <string name="registrarse_text_button">Registrarse</string>
    <string name="has_min_length">La contraseña contiene 6 digitos.</string>
    <string name="has_number">La contraseña tiene numeros.</string>
    <string name="has_upper_case">La contraseña tiene mayusculas.</string>
    <string name="has_lower_case">La contraseña tiene minusculas.</string>
    <string name="password_hint_text">Contraseña</string>
    <string name="email_hint_text">Correo electrónico</string>
    <string name="number_phone_hint_text">Numero de teléfono</string>
    <string name="last_name_hint_text">Apellidos</string>
    <string name="name_text_hint">Nombre</string>
    <string name="create_account_text">Crear cuenta</string>
    <string name="text_img_sales">Imagen de vendedor</string>
    <string name="welcome">Bienvenido</string>
    <string name="welcomeUser">Bienvenido %s</string>
    <string name="text_description_login_screen">Por favor inicia sesión para empezar a ordenar</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="dont_have_account">¿No tienes cuenta? Registrate aquí</string>
    <string name="text_img_food">Image de comida para llevar</string>
    <string name="description_image_rol">Image del rol</string>
    <string name="description_image_profile">Imagen de perfil</string>
    <string name="text_helper_obligatorio">* Obligatorio</string>
    <string name="button_text_galery">Galeria</string>
    <string name="text_button_camara">Camara</string>
    <string name="permission_camera_need">Se necesita el permiso de cámara para tomar fotos</string>
    <string name="select_option_for_photo_profile">Selecciona una opción</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="description_permission_denied">Por favor, habilite el permiso en la configuración de la aplicación.</string>
    <string name="open_settings">Abrir configuración</string>
    <string name="set_permission_text_button">Otorgar</string>
    <string name="cancell_text_button">Cancelar</string>
    <string name="title_multipermission_required">Permisos requeridos</string>
    <string name="title_permission_required">Permiso requerido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit_profile_text">Editar Perfil</string>
    <string name="error_unknown">Error desconocido\n</string>
    <string name="title_dialog_update_success">Perfil actualizado</string>
    <string name="decription_dialog_update_success">El perfil ha sido actualizado correctamente</string>
    <string name="fullName">%s %s</string>
    <string name="category_hint_text">Nombre de la categoria</string>
    <string name="add_category_button_text">Agregar categoria</string>
    <string name="description_text_img_category">Image de categoria</string>
    <string name="error_create_category_title">Error al crear categoria</string>
    <string name="success_create_category">Categoria creada</string>
    <string name="success_create_category_description">La categoria ha sido creada con exito.</string>
    <string name="description_image_category">Image de categoria</string>
    <string name="product_name_text_hint">Nombre del producto</string>
    <string name="description_product_hint_text">Descripcion del producto</string>
    <string name="price_product_hint_text">Precio</string>
    <string name="title_day_meal">Que quieres para %s</string>
    <string name="select_image_button_text">Subir imagenes</string>
    <string name="create_product_text_button">Crear producto</string>
    <string name="description_image_rating_product">Imagen de valoracion de producto</string>
    <string name="price_product_text">$ %s</string>
    <string name="success_add_product_card">El producto se agrego a tu carrito</string>
    <string name="error_add_product_cart">Hubo un error al agregar el producto al carrito</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="success_remove_product">El producto ha sido removido del carrito</string>
    <string name="error_remove_product">Error al remover producto</string>
    <string name="description_image_empty_cart">Imagen de carrito vacio</string>
    <string name="tv_title_empty_cart">Carrito vació</string>
    <string name="tv_description_empty_cart">No has agregado productos aún. ¡Explora la app y encuentra tu comida favorita!</string>
    <string name="description_button_back">Bottom para regresar a la pantalla anterior</string>
    <string name="title_top_bar_text">Carrito</string>
    <string name="tv_text_total_price">Total:</string>
    <string name="text_button_continue">Continuar</string>
    <string name="btn_text_update">Actualizar</string>
    <string name="tv_title_no_connection">No hay conexión de internet</string>
    <string name="tv_description_no_connection">Su conexión a Internet no está disponible actualmente, verifíquela o inténtelo nuevamente.</string>
    <string name="retry_again_text_button">Reintentar de nuevo</string>
    <string name="description_add_product">Agregar producto</string>
    <string name="description_remove_product">Remover producto</string>
    <string name="text_button_add_cart">Agregar al carrito</string>
    <string name="tv_text_review">Calificar</string>
    <string name="error_add_rating_product">Hubo un error al agregar tu calificación</string>
    <string name="success_add_rating_product">Gracias por tu calificación</string>
    <string name="text_button_review">Calificar</string>
    <string name="text_button_not_now">Ahora no</string>
    <string name="description_btn_text_my_cart">Mi carrito</string>
    <string name="tv_title_categories">Categorias.</string>
    <string name="breakfast">desayunar</string>
    <string name="lunch">comer</string>
    <string name="snack">meriendar</string>
    <string name="dinner">cenar</string>
    <string name="tv_title_offers">Ofertas</string>
    <string name="text_btn_get_offers">Obtener</string>
    <string name="tv_title_productsPopular">Productos populares</string>
    <string name="error_server">Ups, algo salió mal, por favor inténtalo de nuevo..</string>
    <string name="request_timeout">La solicitud agotó el tiempo de espera</string>
    <string name="payload_too_large">El archivo que estás intentando subir es demasiado grande.</string>
    <string name="error_connect_exception">Ocurrió un error al intentar conectar con el servidor remoto</string>
    <string name="description_img_point_location">Punto de ubicacion</string>
    <string name="text_btn_confirm">Aceptar</string>
    <string name="text_point_references">%s %s</string>
    <string name="on_success_create_address">La dirección a sido creado correctamente.</string>
    <string name="number_order_client">Orden No. %s</string>
    <string name="total_products">Total de productos: %s</string>
    <string name="tv_title_empty_orders">Ninguna orden</string>
    <string name="tv_description_empty_order">No tienes ninguna orden por el momento.</string>
    <string name="delivery_assing">Repartidor asignado: %s</string>
    <string name="success_assing_delivery">Se repartidor ha sido asignado correctamente.</string>
    <string name="error_assing_delivery">Hubo un error al asignar el repartidor.</string>
</resources>