<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:background="@color/md_theme_background"
    android:layout_height="match_parent"
    tools:context=".auth.presentation.login.LoginActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fitsSystemWindows="true"
       >
       <TextView
           android:id="@+id/tvTitleLogin"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/welcome"
           android:paddingHorizontal="20dp"
           android:textColor="@color/md_theme_onTertiaryContainer"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           style="@style/HealineText"/>
       <TextView
           android:id="@+id/tvDescriptionTextLogin"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingHorizontal="20dp"
           android:text="@string/text_description_login_screen"
           app:layout_constraintTop_toBottomOf="@id/tvTitleLogin"
           app:layout_constraintStart_toStartOf="parent"
           style="@style/TitleText"/>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilEmail"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email_hint_text"
           android:paddingHorizontal="20dp"
           android:layout_marginTop="20dp"
           app:startIconDrawable="@drawable/ic_email"
           app:layout_constraintTop_toBottomOf="@id/tvDescriptionTextLogin"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/tieEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textEmailAddress"
               android:maxLines="1"
               />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password_hint_text"
           android:layout_marginTop="20dp"
           app:endIconMode="password_toggle"
           android:paddingHorizontal="20dp"
           app:startIconDrawable="@drawable/ic_password"
           app:layout_constraintTop_toBottomOf="@id/tilEmail"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/tiePassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:maxLines="2"
               />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnLogin"
           android:layout_width="0dp"
           android:enabled="false"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_marginHorizontal="20dp"
           android:text="@string/login_button_text"
           style="@style/PrimaryButton"
           app:layout_constraintTop_toBottomOf="@id/tilPassword"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"/>
       <TextView
           android:id="@+id/tvRegister"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           style="@style/BodyText"
           android:text="@string/dont_have_account"
           app:layout_constraintTop_toBottomOf="@id/btnLogin"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           />

       <ProgressBar
           android:id="@+id/pgLoading"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:indeterminateTint="@color/md_theme_primary"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           />
   </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/text_img_food"
        android:src="@drawable/img_delivery2"
        android:layout_gravity="bottom"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scrollY="-30dp"
        android:contentDescription="@string/text_img_sales"
        android:src="@drawable/img_delivery"
        android:layout_gravity="center|end"
        />

</FrameLayout>