<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:visibility="gone"
    android:fitsSystemWindows="true"
    android:background="@color/md_theme_background"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivNoConnection"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:contentDescription="@string/description_image_empty_cart"
        android:src="@drawable/ic_no_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gdCenter" />

    <TextView
        android:id="@+id/tvTitleConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/tv_title_no_connection"
        app:layout_constraintTop_toBottomOf="@id/gdCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tvDescriptionCartEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyText"
        android:alpha="0.7"
        android:text="@string/tv_description_no_connection"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConnection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdCenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetryAgain"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/retry_again_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionCartEmpty" />


</androidx.constraintlayout.widget.ConstraintLayout>