<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:padding="30dp"
    android:background="@color/md_theme_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivEmptyCart"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:scrollX="20dp"
        android:contentDescription="@string/description_image_empty_cart"
        android:src="@drawable/ic_cart_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gdCenter" />

    <TextView
        android:id="@+id/tvTitleCartEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/tv_title_empty_cart"
        app:layout_constraintTop_toBottomOf="@id/gdCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tvDescriptionCartEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyText"
        android:alpha="0.7"
        android:text="@string/tv_description_empty_cart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleCartEmpty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdCenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>



</androidx.constraintlayout.widget.ConstraintLayout>